Fixed Bug (Dark Mode)

--- a/frontend/src/components/CourseDetail.css
+++ b/frontend/src/components/CourseDetail.css
@@ -15,15 +15,20 @@
 }
 .button-studentList {
   transition: all .1s ease-in;
-    width: 100%;
-    padding: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    background: rgba(255, 255, 255, 0) !important;
-    color: var(--black-color) !important;
-    border: 1px solid var(--black-color) !important;
-    box-sizing: border-box;
-    border-radius: 5px;
+  width: 100%;
+  padding: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background: rgba(255, 255, 255, 0) !important;
+  color: var(--black-color) !important;
+  border: 1px solid var(--black-color) !important;
+  box-sizing: border-box;
+  border-radius: 5px;
+  
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: block;
 }
 .slist {
   padding: 5px;
